--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "spellright.language": [
-        "en"
+        "pt"
     ],
     "spellright.documentTypes": [
-        "markdown",
+        "markdown"
     ]
 }
